fix alignment of code blocks inside tables

--- a/themes/tria-2019/source/css/_content.styl
+++ b/themes/tria-2019/source/css/_content.styl
@@ -82,6 +82,7 @@
     line-height 2.4rem
 
   figure table
+    border-collapse collapse
     width 100%
 
     pre
